Создал стили для моб версии

--- a/index.html
+++ b/index.html
@@ -16,15 +16,21 @@
                     <a href="#"><img src="img/search.svg" alt="search"></a>
                 </div>
                 <div class="header-icons">
-                    <a href="#" id="menu-button">
-                        <a href="#"><img src="img/menu.svg" alt="search"></a>
-                    </a>
-                    <a href="registration.html">
-                        <a href="#"><img src="img/reg.svg" alt="search"></a>
-                    </a>
-                    <a href="cart.html">
-                        <a href="#"><img src="img/cart.svg" alt="search"></a>
-                    </a>
+                    <div class="mb">
+                        <a href="#" id="menu-button">
+                            <a href="#"><img src="img/menu.svg" alt="search"></a>
+                        </a>
+                    </div>
+                    <div class="reg">
+                        <a href="registration.html">
+                            <a href="#"><img src="img/reg.svg" alt="search"></a>
+                        </a>
+                    </div>
+                    <div class="cart">
+                        <a href="cart.html">
+                            <a href="#"><img src="img/cart.svg" alt="search"></a>
+                        </a>
+                    </div>
                 </div>
             </div>
             <script src="script.js"></script>
