--- a/index.html
+++ b/index.html
@@ -99,10 +99,7 @@
                 <div class="product-image">
                     <img src="img/img3.png" alt="Product 3">
                     <div class="product-overlay">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="360" height="260" viewBox="0 0 360 260"
-                            fill="none">
-                            <path d="M360 0H0V260H360V0Z" fill="#211616" fill-opacity="0.7" />
-                        </svg>
+                        <img src="img/Rectangle1.png" alt="Overlay">
                         <p class="special-text">NEW ARRIVALS <br><span class="sale__text">FOR KIDS</span>
                         </p>
                     </div>
