--- a/index.html
+++ b/index.html
@@ -199,6 +199,56 @@
                 </a>
             </div>
         </section>
+
+        <footer>
+            <div class="footer-section-black">
+                <div class="footer-block">
+                    <img src="img/car.svg" alt="Car Icon">
+                    <p class="title">Free Delivery</p>
+                    <p class="description">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+                        with extensive models.</p>
+                </div>
+                <div class="footer-block">
+                    <img src="img/percent.svg" alt="Percent Icon">
+                    <p class="title">Sales &amp Discounts</p>
+                    <p class="description">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+                        with extensive models.</p>
+                </div>
+                <div class="footer-block">
+                    <img src="img/crown.svg" alt="Crown Icon">
+                    <p class="title">Quality Assurance</p>
+                    <p class="description">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+                        with extensive models.</p>
+                </div>
+            </div>
+            <div class="footer-section-white">
+                <div class="footer-image">
+                    <img src="img/foto.png" alt="Footer Image">
+                    <p>Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum.</p>
+                </div>
+                <div class="footer-subscribe">
+                    <p>SUBSCRIBE FOR OUR NEWSLETTER AND PROMOTIONS</p>
+                    <form class="subscribe-form">
+                        <label for="email">Enter Your Email:</label>
+                        <input type="email" id="email" name="email" placeholder="Your email address">
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="footer-copyright">
+                    <p>&copy; 2022 Brand All Rights Reserved.</p>
+                </div>
+                <div class="footer-social-icons">
+                    <a href="#" class="social-icon"><img src="img/facebook.svg" alt="Facebook"></a>
+                    <a href="#" class="social-icon"><img src="img/instagram.svg" alt="Telegram"></a>
+                    <a href="#" class="social-icon"><img src="img/pinterest.svg" alt="Pinterest"></a>
+                    <a href="#" class="social-icon"><img src="img/twitter.svg" alt="Twitter"></a>
+                </div>
+            </div>
+        </footer>
+
+
     </body>
 
 </html>
