Распределил элементы в футере, набросал стили

--- a/index.html
+++ b/index.html
@@ -200,30 +200,45 @@
             </div>
         </section>
 
-        <footer>
-            <div class="footer-section-black">
+        <section class="delivery-promotions-subscription">
+            <div class="dps">
                 <div class="footer-block">
                     <img src="img/car.svg" alt="Car Icon">
                     <p class="title">Free Delivery</p>
-                    <p class="description">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+                    <p class="description">Worldwide delivery on all. Authorit tively morph <br>next-generation
+                        innov
+                        tion
                         with extensive models.</p>
                 </div>
                 <div class="footer-block">
                     <img src="img/percent.svg" alt="Percent Icon">
                     <p class="title">Sales &amp Discounts</p>
-                    <p class="description">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+                    <p class="description">Worldwide delivery on all. Authorit tively morph <br>next-generation
+                        innov
+                        tion
                         with extensive models.</p>
                 </div>
                 <div class="footer-block">
                     <img src="img/crown.svg" alt="Crown Icon">
                     <p class="title">Quality Assurance</p>
-                    <p class="description">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+                    <p class="description">Worldwide delivery on all. Authorit tively morph <br>next-generation
+                        innov
+                        tion
                         with extensive models.</p>
                 </div>
             </div>
+        </section>
+        <section class="sea">
+            <div class="background-image"></div>
+            <svg class="overlay-svg" width="1600" height="448" viewBox="0 0 1600 448" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <rect width="1600" height="448" fill="#F4F4F4" fill-opacity="0.7" />
+            </svg>
             <div class="footer-section-white">
+                <div class="footer-blackout">
+                </div>
                 <div class="footer-image">
-                    <img src="img/foto.png" alt="Footer Image">
+                    <img src="img/foto.png" alt="Footer face">
                     <p>Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum.</p>
                 </div>
                 <div class="footer-subscribe">
@@ -235,7 +250,9 @@
                     </form>
                 </div>
             </div>
-            <div class="footer">
+        </section>
+        <div class="footer-section-bottom">
+            <div class="fsb">
                 <div class="footer-copyright">
                     <p>&copy; 2022 Brand All Rights Reserved.</p>
                 </div>
@@ -245,9 +262,9 @@
                     <a href="#" class="social-icon"><img src="img/pinterest.svg" alt="Pinterest"></a>
                     <a href="#" class="social-icon"><img src="img/twitter.svg" alt="Twitter"></a>
                 </div>
-            </div>
-        </footer>
 
+            </div>
+        </div>
 
     </body>
 
