--- a/index.html
+++ b/index.html
@@ -251,21 +251,21 @@
                 </div>
             </div>
         </section>
-        <div class="footer-section-bottom">
-            <div class="fsb">
-                <div class="footer-copyright">
-                    <p>&copy; 2022 Brand All Rights Reserved.</p>
+        <footer>
+            <div class="footer-section-bottom">
+                <div class="fsb">
+                    <div class="footer-copyright">
+                        <p>&copy; 2022 Brand All Rights Reserved.</p>
+                    </div>
+                    <div class="footer-social-icons">
+                        <a href="#" class="social-icon"><img src="img/facebook.svg" alt="Facebook"></a>
+                        <a href="#" class="social-icon"><img src="img/instagram.svg" alt="Telegram"></a>
+                        <a href="#" class="social-icon"><img src="img/pinterest.svg" alt="Pinterest"></a>
+                        <a href="#" class="social-icon"><img src="img/twitter.svg" alt="Twitter"></a>
+                    </div>
                 </div>
-                <div class="footer-social-icons">
-                    <a href="#" class="social-icon"><img src="img/facebook.svg" alt="Facebook"></a>
-                    <a href="#" class="social-icon"><img src="img/instagram.svg" alt="Telegram"></a>
-                    <a href="#" class="social-icon"><img src="img/pinterest.svg" alt="Pinterest"></a>
-                    <a href="#" class="social-icon"><img src="img/twitter.svg" alt="Twitter"></a>
-                </div>
-
             </div>
-        </div>
-
+        </footer>
     </body>
 
 </html>
