--- a/index.html
+++ b/index.html
@@ -230,22 +230,22 @@
         </section>
         <section class="sea">
             <div class="background-image"></div>
-            <svg class="overlay-svg" width="1600" height="448" viewBox="0 0 1600 448" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <rect width="1600" height="448" fill="#F4F4F4" fill-opacity="0.7" />
-            </svg>
             <div class="footer-section-white">
-                <div class="footer-blackout">
-                </div>
                 <div class="footer-image">
                     <img src="img/foto.png" alt="Footer face">
-                    <p>Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum.</p>
+                    <p>
+                        <span class="vest">"Vestibulum quis porttitor dui! Quisque<br>viverra nunc mi,</span>
+                        <span class="a_pul">a pulvinar purus<br>condimentum"</span>
+                    </p>
                 </div>
                 <div class="footer-subscribe">
-                    <p>SUBSCRIBE FOR OUR NEWSLETTER AND PROMOTIONS</p>
+                    <p>
+                        <span class="sub">SUBSCRIBE<br></span>
+                        <span class="for">FOR OUR NEWSLETTER AND PROMOTIONS</span>
+                    </p>
                     <form class="subscribe-form">
-                        <label for="email">Enter Your Email:</label>
-                        <input type="email" id="email" name="email" placeholder="Your email address">
+                        <label for="email"></label>
+                        <input type="email" id="email" name="email" placeholder="Enter Your Email">
                         <button type="submit">Subscribe</button>
                     </form>
                 </div>
