Создал стили для планшета

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                         </a>
                     </div>
                     <div class="cart">
-                        <a href="cart.html">
-                            <a href="#"><img src="img/cart.svg" alt="search"></a>
+                        <a href="cart.html" class="cart-link">
+                            <img src="img/cart.svg" alt="Cart">
+                            <span class="cart-count">5</span>
                         </a>
                     </div>
                 </div>
